--- a/06-MultipleReg.Rmd
+++ b/06-MultipleReg.Rmd
@@ -18,37 +18,56 @@ How do you think `hp` and `wt` will influence how many miles per gallon of gasol
 With two explanatory variables as here, it is still possible to visualize the regression plane, so let's start with this as an answer. The OLS regression plane through this dataset looks like in figure \@ref(fig:plane3D-reg):
 
 ```{r plane3D-reg,echo=FALSE,fig.align='center',fig.cap='Multiple Regression - a plane in 3D. The red lines indicate the residual for each observation.'}
-# add grid lines with this https://stackoverflow.com/questions/40748949/match-gridlines-to-axis-ticks-in-3d-regression-plot-persp-and-rockchalk
-library(plot3D)
+library(plotly)
+library(reshape2)
 data(mtcars)
  
 # linear fit
 fit <- lm(mpg ~ wt+hp,data=mtcars)
  
+# library(plot3D)
 # predict on x-y grid, for surface
-wt.pred <- seq(1.5, 5.5, length.out = 30)
-disp.pred <- seq(52, 335, length.out = 30)
-xy <- expand.grid(wt = wt.pred, 
-                 hp = disp.pred)
- 
-mpg.pred <- matrix (nrow = 30, ncol = 30, 
-  data = predict(fit, newdata = data.frame(xy), interval = "prediction"))
- 
+# wt.pred <- seq(1.5, 5.5, length.out = 30)
+# disp.pred <- seq(52, 335, length.out = 30)
+# xy <- expand.grid(wt = wt.pred, 
+#                  hp = disp.pred)
+#  
+# mpg.pred <- matrix (nrow = 30, ncol = 30, 
+#   data = predict(fit, newdata = data.frame(xy), interval = "prediction"))
+#  
 # predicted z-values, fitted points for droplines to surface
-fitpoints <- predict(fit) 
+# fitpoints <- predict(fit) 
 # scatter3D(z = mtcars$mpg, x = mtcars$wt, y = mtcars$disp, pch = 20, cex = 1.5, 
 #       theta = 40, phi = 15, ticktype = "detailed",col="red",
 #       xlab = "wt", ylab = "disp", zlab = "mpg", clab = "mpg",
 #       surf = NULL,
 #       colkey = FALSE,#list(length = 0.8, width = 0.4),            
 #       main = "mtcars")
-scatter3D(z = mtcars$mpg, x = mtcars$wt, y = mtcars$hp, pch = 20, cex = 1.5,
-      theta = 40, phi = 15, ticktype = "detailed",col="red",
-      xlab = "weight", ylab = "horse power", zlab = "mpg", clab = "mpg",
-      surf = list(x = wt.pred, y = disp.pred, z = mpg.pred,
-                  facets = NA, fit = fitpoints,col="grey"),
-      colkey = FALSE,#list(length = 0.8, width = 0.4),
-      main = "mtcars")
+# scatter3D(z = mtcars$mpg, x = mtcars$wt, y = mtcars$hp, pch = 20, cex = 1.5,
+#       theta = 40, phi = 15, ticktype = "detailed",col="red",
+#       xlab = "weight", ylab = "horse power", zlab = "mpg", clab = "mpg",
+#       surf = list(x = wt.pred, y = disp.pred, z = mpg.pred,
+#                   facets = NA, fit = fitpoints,col="grey"),
+#       colkey = FALSE,#list(length = 0.8, width = 0.4),
+#       main = "mtcars")
+
+
+
+to_plot_x <- range(mtcars$wt)
+to_plot_y <- range(mtcars$hp)
+
+df <- data.frame(wt = rep(to_plot_x, 2),
+           hp = rep(to_plot_y, each = 2))
+df["pred"] <- predict.lm(fit, df, se.fit = F)
+
+surf <- acast(df, wt ~ hp)
+
+color <- rep(0, length(df))
+mtcars %>%
+  plot_ly(colors = "grey") %>%
+  add_markers(x = ~wt, y = ~hp, z = ~mpg,name = "data",opacity = .8, marker=list(color = 'black', size = 5, hoverinfo="skip")) %>%
+  add_surface(x = to_plot_x, y = to_plot_y, z = ~surf, inherit = F, name = "Mtcars 3D", opacity = .75, cauto = F, surfacecolor = color) %>%
+  hide_colorbar()
 ```
 
 This visualization shows a couple of things: the data are shown with red points, the grey plane is the one resulting from OLS estimation of equation \@ref(eq:abline2d), and the red lines show the size of the error between estimated plane and observed data. You should realize that this is exactly the same story as told in figure \@ref(fig:line-arrows) - just in three dimensions!
@@ -111,13 +130,13 @@ df <- data.frame(str = rep(to_plot_x, 2),
 df["pred"] <- predict.lm(fit_multivariate, df, se.fit = F)
 
 surf <- acast(df, avginc ~ str)
+color <- rep(0, length(df))
 
 Caschool %>%
-  plot_ly() %>%
-  add_markers(x = ~str, y = ~avginc, z = ~testscr, name = "Data", hoverinfo = "skip", opacity = .5, marker=list(color = 'blue', size = 3)) %>%
-  add_surface(x = to_plot_x, y = to_plot_y, z = ~surf, inherit = F, name = "Best Fit Plane", opacity = .75, cauto = F, surfacecolor = rep('grey', 4)) %>%
+  plot_ly(colors = "grey") %>%
+  add_markers(x = ~str, y = ~avginc, z = ~testscr, name = "Data", hoverinfo = "skip", opacity = .6, marker=list(color = 'red', size = 4)) %>%
+  add_surface(x = to_plot_x, y = to_plot_y, z = ~surf, inherit = F, name = "Best Fit Plane", opacity = .75, cauto = F, surfacecolor = color) %>%
   hide_colorbar()
-
 ```
 
 While you explore this plot, ask yourself the following question: if you could only choose one of the two explanatory variables in our model (that is, either $str$ or $avginc$) to predict the value of a given school's average test score, which one would you choose? Why? Discuss this with your classmates.
@@ -160,19 +179,15 @@ Looking at our visualization may help understand this result better. Figure \@re
 
 ```{r 3D-Plotly-inter, echo = FALSE, warning=F, message = F,fig.cap='Californa Test Scores vs student/teach ratio and avg income plus interaction term'}
 
-to_plot_x <- c(min(Caschool$str), max(Caschool$str))
-to_plot_y <- c(min(Caschool$avginc), max(Caschool$avginc))
-
-df <- data.frame(str = rep(to_plot_x, 2),
-           avginc = rep(to_plot_y, each = 2))
 df["pred"] <- predict.lm(lm_inter, df, se.fit = F)
-
 surf <- acast(df, avginc ~ str)
 
+color <- rep(0, length(df))
+
 Caschool %>%
-  plot_ly() %>%
-  add_markers(x = ~str, y = ~avginc, z = ~testscr, name = "Data", hoverinfo = "skip", opacity = .5, marker=list(color = 'blue', size = 3)) %>%
-  add_surface(x = to_plot_x, y = to_plot_y, z = ~surf, inherit = F, name = "Best Fit Plane with Interactions", opacity = .75, cauto = F, surfacecolor = rep('grey', 4)) %>%
+  plot_ly(colors = "blue") %>%
+  add_markers(x = ~str, y = ~avginc, z = ~testscr, name = "Data", hoverinfo = "skip", opacity = .6, marker=list(color = 'red', size = 4)) %>%
+  add_surface(x = to_plot_x, y = to_plot_y, z = ~surf, inherit = F, name = "Best Fit Plane with Interaction", opacity = .75, cauto = F, surfacecolor = color) %>%
   hide_colorbar()
 
 ```
