--- a/inst/tutorials/non_normal_models.Rmd
+++ b/inst/tutorials/non_normal_models.Rmd
@@ -9,22 +9,58 @@ knitr::opts_chunk$set(echo = TRUE)
 library(learnr)
 ```
 
-## A Simple Linear Model with uniformly distributed errors.
+## A Simple Linear Model with Normally distributed errors
 
-In this tutorial, we will...
+We start our discussion by considering the following model, which you should be familiar with by now:
 
-----
+$$Y = 5 + 2X + \varepsilon, \quad \varepsilon \sim \mathcal{N}(0, 2^2)$$
 
-We start our discussion by considering the following model:
+We will write a function called `simulate_1_sample_normal` that draws a sample of a given size from the population and returns it as a `data.frame`.
+
+```{r simulate_1_sample_normal}
+simulate_1_sample_normal <- function(size){
+  x = rnorm(size, 3, 3)
+  y = 5 + 2*x + rnorm(size, 0, 2)
+  return(data.frame(x = x, y = y))
+}
+```
+
+For example, we can now simulate a sample of size N = 10 by simply calling the function:
+
+```{r simulate_1_sample_example_normal}
+simulate_1_sample_normal(size = 10)
+```
+
+One of the advantages of having the function return a `data.frame` is that we can plot its output very easily:
+
+```{r simulate_1_sample_plot_normal, exercise=TRUE, exercise.eval=TRUE}
+plot(simulate_1_sample_normal(size = 10), xlim = c(-10, 15), ylim = c(-15, 35))
+```
+
+You should try and run the above line several times and using several different sample sizes. Notice how each sample differs from the previous one (although this is harder to tell when you use large samples!)
+
+Similarly, we can simulate the process of taking one sample of size N = 10 and fitting a linear model to it:
+
+```{r simulate_1_sample_lm_normal, exercise=TRUE, exercise.eval=TRUE}
+fit <- lm(y~x, simulate_1_sample_normal(size = 10))
+summary(fit)
+```
+
+Again, play around with the above cell for a little bit -- choosing different sample sizes and keeping track of the precision and variability of the slope and intercept estimates. Start with `size = 10` and run the cell 5 times, how big is the variation in the estimated coefficients? Now repeat the process using `size = 1000`, do you think the model is estimated more precisely now?
+
+
+## A Simple Linear Model with uniformly distributed errors
+
+We now consider the following model:
 
 $$Y = 5 + 2X + \varepsilon, \quad \varepsilon \sim unif(-2, 2)$$
 
-Note how this time the error term is not normally distributed, instead it is uniformly distributed between -2 and 2 (but still has mean zero!)
+Note how this time *the error term is not normally distributed*, instead it is uniformly distributed between -2 and 2 (but still has mean zero!)
 
-We will write a function called `simulate_1_sample` that draws a sample of a given size from the population and returns it as a `data.frame`.
+We will write a function called `simulate_1_sample_unif` that draws a sample of a given size from the population and returns it as a `data.frame`.
 
-```{r simulate_1_sample}
-simulate_1_sample <- function(size){
+```{r simulate_1_sample_unif}
+simulate_1_sample_unif <- function(size){
   x = rnorm(size, 3, 3)
   y = 5 + 2*x + runif(n = size, -2, 2)
   return(data.frame(x = x, y = y))
@@ -34,13 +70,13 @@ simulate_1_sample <- function(size){
 For example, we can now simulate a sample of size N = 10 by simply calling the function:
 
 ```{r simulate_1_sample_example}
-simulate_1_sample(size = 10)
+simulate_1_sample_unif(size = 10)
 ```
 
 One of the advantages of having the function return a `data.frame` is that we can plot its output very easily:
 
 ```{r simulate_1_sample_plot, exercise=TRUE, exercise.eval=TRUE}
-plot(simulate_1_sample(size = 10), xlim = c(-10, 15), ylim = c(-15, 35))
+plot(simulate_1_sample_unif(size = 10), xlim = c(-10, 15), ylim = c(-15, 35))
 ```
 
 You should try and run the above line several times and using several different sample sizes. Notice how each sample differs from the previous one (although this is harder to tell when you use large samples!)
@@ -48,7 +84,7 @@ You should try and run the above line several times and using several different 
 Similarly, we can simulate the process of taking one sample of size N = 10 and fitting a linear model to it:
 
 ```{r simulate_1_sample_lm, exercise=TRUE, exercise.eval=TRUE}
-fit <- lm(y~x, simulate_1_sample(size = 10))
+fit <- lm(y~x, simulate_1_sample_unif(size = 10))
 summary(fit)
 ```
 
@@ -56,14 +92,14 @@ Again, play around with the above cell for a little bit -- choosing different sa
 
 ## Simulating Many Samples
 
-Thanks to R (and to the fact that the data itself is simulated), we can get an idea of what would happen if we could estimate the parameters of our linear models using **many different samples** of any given size! For this, we define the function `simulate_N_samples` which essentially calls the `simulate_1_sample` function N times, fits a linear model to each of the samples, and keeps track of all estimated slopes and intercepts.
+Thanks to R (and to the fact that the data itself is simulated), we can get an idea of what would happen if we could estimate the parameters of our linear models using **many different samples** of any given size! For this, we define the function `simulate_N_samples_unif` which essentially calls the `simulate_1_sample_unif` function N times, fits a linear model to each of the samples, and keeps track of all estimated slopes and intercepts.
 
 ```{r simulate_N_sample}
-simulate_N_samples <- function(size, N){
+simulate_N_samples_unif <- function(size, N){
   slopes <- NULL
   intercepts <- NULL
   for (i in 1:N){
-    fit <- lm(y~x, simulate_1_sample(size = size))
+    fit <- lm(y~x, simulate_1_sample_unif(size = size))
     intercepts <- append(intercepts, as.numeric(fit$coefficients[1]))
     slopes <- append(slopes, as.numeric(fit$coefficients[2]))
   }
@@ -74,10 +110,10 @@ simulate_N_samples <- function(size, N){
 Let's put it to the test:
 
 ```{r simulate_N_samples_test, exercise = T, exercise.eval = T}
-simulate_N_samples(10, 5)
+simulate_N_samples_unif(10, 5)
 ```
 
-> **NB: We should pause for a second here and realise that what we are simulating is the *imaginary scenario* in which the social scientist has access to many different samples from the population. In reality, *researchers only have access to a single sample*! However, it is a very useful fiction to imagine what would happen if we did have access to an infinity of samples in order to be able to assess the reliability of the sample at hand.**
+> NB: We should pause for a second here and realise that what we are simulating is the *imaginary scenario* in which the social scientist has access to many different samples from the population. In reality, *researchers only have access to a single sample*! However, it is a very useful fiction to imagine what would happen if we did have access to an infinity of samples in order to be able to assess the reliability of the sample at hand.
 
 Now we are ready to compare how our estimates' precision changes as a function of the sample size! For this, we will:
 
@@ -89,7 +125,7 @@ Run the following cell to see the histograms:
 
 ```{r simulate_N_samples_hist, exercise = T}
 # Pick a value for `size`, do not change N!
-sim <- simulate_N_samples(size = 10, N = 5000)
+sim <- simulate_N_samples_unif(size = 10, N = 5000)
 
 #DO NOT CHANGE THESE LINES
 hist(sim$intercepts, main = "Intercept Estimates", xlab="", xlim = c(0, 10), col = "lightblue");
@@ -108,7 +144,7 @@ Let's plot how standard errors evolve with the sample size:
 n <- c(5, 10, 20, 30, 50, 75, 100, 200)
 se <- NULL
 for (i in n){
-  sim <- simulate_N_samples(size = i, N = 1000)
+  sim <- simulate_N_samples_unif(size = i, N = 1000)
   se <- append(se, sd(sim$slope))
 }
 plot(n, se, xlab = "Sample Size", ylab = "Standard Errors of Estimated Slope")
@@ -141,11 +177,36 @@ curve(curv, from = 0, to = 200, n = 200, col = "green", add = T)
 legend(x = "top", legend = c("Simulated", "Expected"), lty = "solid", col = c("black", "green"))
 ```
 
-The theoretical formula suggests that the bigger the variance of $(X_i - \mu_X)\varepsilon_i$ (i.e. the variance of both the error term and the regressor), the bigger the sample size $n$ needs to be in order to reach reasonable certainty about your estimates. 
+The theoretical formula suggests that the bigger the variance of $\varepsilon_i$ (denoted as $\sigma^2_{\varepsilon}$), the bigger the sample size $n$ needs to be in order to reach reasonable certainty about your estimates.
 
 The fact that the empirical standard error is higher than the expected ones for small samples is due to the fact that the theoretical formula used above relies on a *Normal Approximation* that gets better and better as the sample size increases. As a rule of thumbs, your sample should contain at least n = 100 observations to use the normal approximation in computing your standard errors (otherwise, you will underestimate the variance of your estimates!)
 
-Both statistical theory and practice therefore seem to suggest that **the standard deviation of our estimates are decreasing in sample size $n$ (in fact, by a factor of $\frac{1}{\sqrt n}$)**. To understand this, it is easier to look at the distribution of sample means (under the assumption of *i.i.d samples* which stands for independent and identically distributed):
+We can also plot how an increase in $\sigma_{\varepsilon}$ affects our standard errors, for a *fixed* sample size (here, N = 100).
+
+```{r plot-stderr-3}
+
+curv = function(x) (1/sqrt(200)) * x
+
+sig <- seq(0.2, 20, .5)
+se = NULL
+for (i in sig){
+  x = rnorm(200, 5, 1)
+  y = 7- 2*x + rnorm(200, 0, i) 
+  fit <- lm(y~x, data.frame(x=x, y=y))
+  se <- append(se, summary(fit)$coefficients[2,2])
+}
+
+plot(sig, se, xlab = expression(sigma[epsilon]), ylab = "Standard Errors of Estimated Slope")
+lines(sig, se)
+curve(curv, from = 0, to = 20, n = 10, col = "green", add = T)
+
+
+legend(x = "top", legend = c("Simulated", "Expected"), lty = "solid", col = c("black", "green"))
+
+```
+
+
+Both statistical theory and practice therefore seem to suggest that **the standard deviation of our estimates are decreasing in sample size $n$ (in fact, by a factor of $\frac{1}{\sqrt n}$)**. To understand this, it is easier to look at the distribution of sample means (under the assumption of *i.i.d samples*, *i*ndependent and *i*dentically *d*istributed):
 
 Here, we'll draw 1000 samples of size `sample_size` from the distribution $\mathcal{N}(5, 10^2)$, compute each sample mean, and plot their distribution. Try and increase the sample size.
 
@@ -174,10 +235,3 @@ You should observe that the distribution of means becomes tighter as the sample 
 $$\sigma_{\bar{X}} = \frac{\sigma_X}{\sqrt n} = \frac{10}{\sqrt n}$$
 
 Recall that the sample mean is the OLS estimator of the most simple linear model. Statistical theory shows that this intuition applies to more complex models (such as when you use one regressor !)
-
-
-
-
-
-
-
